--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -16,7 +16,7 @@
         </p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -28,21 +28,19 @@
         </p>
     </section>
 
-    <section id="cordel1">
-        <article>
-            <p class="pcordel">
-                Não é mais como era antes <br>
-                É tudo abreviado <br>
-                "Você" só tem duas letras <br>
-                O "O" e o "E" foi riscado <br>
-                Para declarar o amor <br>
-                Basta botar uma flor <br>
-                E um coração desenhado.
-            </p>
-        </article>
+    <section class="imagem">
+        <p>
+            Não é mais como era antes <br>
+            É tudo abreviado <br>
+            "Você" só tem duas letras <br>
+            O "O" e o "E" foi riscado <br>
+            Para declarar o amor <br>
+            Basta botar uma flor <br>
+            E um coração desenhado.
+        </p>
     </section>
 
-    <section>
+    <section class="normal">
             <p>
                 Arroba agora não pesa <br>
                 É parte de um endereço <br>
@@ -64,21 +62,20 @@
             </p>
     </section>
 
-    <section id="cordel2">
-        <article>
-            <p>
-                Tenho saudade das cartas <br>
-                Escritas com a própria mão <br>
-                Mandava no mês de Junho <br>
-                Só chegava no Verão <br>
-                Mas matava a saudade <br>
-                Era texto de verdade <br>
-                Nas linhas do coração.
-            </p>
-        </article>
+    <section class="imagem">
+        <p>
+            Tenho saudade das cartas <br>
+            Escritas com a própria mão <br>
+            Mandava no mês de Junho <br>
+            Só chegava no Verão <br>
+            Mas matava a saudade <br>
+            Era texto de verdade <br>
+            Nas linhas do
+            coração.
+        </p>
     </section>
 
-    <section>
+    <section class="normal">
             <p>
                 Agora, escrevo e envio <br>
                 Chegando na mesma hora <br>
