Adicionei as imgaens com efeito parallax e apliquei configuração global que retira a margin

--- a/projetos/p001/index.html
+++ b/projetos/p001/index.html
@@ -46,7 +46,7 @@
     </header>
     <main>
 
-        <section>
+        <section id="intro">
             <h1>
                 As melhores pizzas da região <br> bragantina
             </h1>
