Detalhes no HTML

--- a/projetos/p001/index.html
+++ b/projetos/p001/index.html
@@ -103,7 +103,7 @@
                     Conheça nosso blog
                 </a>
             </p>
-            <img src="imagens/quemsomos/historia.jpg" alt="Pizza sendo feita">
+            <img src="imagens/quemsomos/historia.jpg" alt="Pizza Margherita sendo feita">
         </section>
 
         <section id="cardapio">
@@ -246,8 +246,7 @@
         <img src="imagens/rodape/redessociais/instagram.ico" alt="Instagram" class="logoredes"> <img src="imagens/rodape/redessociais/facebook.png" alt="Facebook" class="logoredes"> <img src="imagens/rodape/redessociais/youtube.webp" alt="Youtube" class="logoredes">
 
         <p>
-            Bateu aquela fome epois de ver o site?
-            <br>
+            Bateu aquela fome depois de ver o site?
             Faça seu pedido
         </p>
         <h2>
